-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
master
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033047 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045351 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038549 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053459 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
This is a fix for 8028580: PPC64 (part 114/120): Support for Call nodes with constants.
That change adds MachConstantBase node for Calls at req()-1 during
expand. Reister allocation adds the derived/base pairs and then
uses the wrong register maps for allocation, because the MachConstantBase
node is no more at req()-1
Now add the edge in the matcher when the node is complete. Add it
after parameters and before jvms. Adapt jvms offsets. Also assure
jvms is always cloned, else the offset gets wrong.
So far, $constanttablebase is only used in Calls on PPC, so this has no effect on
other platforms.
----------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
That change adds MachConstantBase node for Calls at req()-1 during
expand. Reister allocation adds the derived/base pairs and then
uses the wrong register maps for allocation, because the MachConstantBase
node is no more at req()-1
Now add the edge in the matcher when the node is complete. Add it
after parameters and before jvms. Adapt jvms offsets. Also assure
jvms is always cloned, else the offset gets wrong.
So far, $constanttablebase is only used in Calls on PPC, so this has no effect on
other platforms.
----------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
- backported by
-
JDK-8033047 PPC64: (part 220): ConstantTableBase for calls between args and jvms
-
- Resolved
-
-
JDK-8038549 PPC64: (part 220): ConstantTableBase for calls between args and jvms
-
- Resolved
-
-
JDK-8045351 PPC64: (part 220): ConstantTableBase for calls between args and jvms
-
- Resolved
-
-
JDK-8053459 PPC64: (part 220): ConstantTableBase for calls between args and jvms
-
- Resolved
-